--- a/rootdir/etc/init.hi3635.rc
+++ b/rootdir/etc/init.hi3635.rc
@@ -982,12 +982,9 @@ on boot
     chmod 0660 /sys/devices/system/cpu/cpu0/cpufreq/msg_policy
 
 on charger
-    mount ext4 /dev/block/platform/hi_mci.0/by-name/splash2 /splash2 wait rw nosuid nodev
-    mount ext4 /dev/block/platform/hi_mci.0/by-name/system /system ro
-    mount_all /fstab.hi3635
     chown system system /sys/class/android_usb/android0/switch_request
     chmod 0664 /sys/class/android_usb/android0/switch_request
-
+    start hw_charger
 
 # Start services
 
@@ -1001,6 +998,12 @@ service thermal-daemon /system/bin/thermal-daemon
     class main
     user system 
     group system
+
+service hw_charger /sbin/hw_healthd -c
+    class charger
+    user root
+    seclabel u:r:healthd:s0
+    disabled
 
 service oeminfo_nvm /sbin/oeminfo_nvm_server
     class core
